tests/transpiler/x/ocaml/inner_join.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/inner_join.ml", line 10, characters 119-120:
10 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") ["Order"; string_of_int (List.assoc "orderId" entry)); "by"; (List.assoc "customerName" entry); "- $"; s
                                                                                                                            ^
Error: Syntax error: ']' expected
File "/workspace/mochi/tests/transpiler/x/ocaml/inner_join.ml", line 10, characters 67-68:
10 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") ["Order"; string_of_int (List.assoc "orderId" entry)); "by"; (List.assoc "customerName" entry); "- $"; s
                                                                        ^
  This '[' might be unmatched
